# communityops-anna-app

./: LICENCE  README.md  app.json  manifest.json  package-lock.json  package.json
.anna/: app.json  dev-app.json  executas.lock.json
.github/workflows/: build-macos.yml
bundle/: anna-tool-ids.js  app.js  index.html  style.css
executas/communityops-coach/: SKILL.md
executas/communityops-tool/: README.md  communityops_plugin.py  executa.json  pyproject.toml  tool-giansandoval-communityops-tool-ejh7utzy.spec
executas/communityops-tool/.anna/: executa.json
executas/communityops-tool/staging-windows-x86_64/: manifest.json
