[project]
name = "communityops-tool"
version = "1.0.0"
description = "CommunityOps Tool Executa Plugin"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
communityops-tool = "communityops_plugin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "communityops_plugin.py",
  "README.md",
  "executa.json"
]

[tool.hatch.build.targets.sdist]
include = [
  "communityops_plugin.py",
  "README.md",
  "executa.json"
]
